# auto-git-gui

./: .gitignore  README.md  animeCat.js  editor-reword.js  index.html  main.js  package.json  preload.js  rebase-sequence-windows.js.js  renderer.js  rewrite-trigger.txt  settings.html  tailwind.config.js  tauriBridge.js
assets/icon/mac/: icon.icns
modules/: store.js  tray.js
scripts/: prepare-tauri-frontend.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
